# md-man

./: .gitignore  README.md  mark4  pyproject.toml
docs/plans/: 2026-03-08-markdown-tui-design.md  2026-03-08-markdown-tui-implementation.md
src/mark4/: __init__.py  __main__.py  app.py  app.tcss  main.py  scanner.py  translator.py  widgets.py
src/md_man/: __init__.py  app.py  main.py  scanner.py  translator.py  widgets.py
tests/: test_app.py  test_main.py  test_packaging.py  test_scanner.py  test_translator.py
