[project]
name = "mark4"
version = "1.0.0"
description = "Markdown TUI viewer with translation support"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.12"
authors = [
  { name = "rockeron" },
]
keywords = ["markdown", "tui", "textual", "terminal", "translation"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: End Users/Desktop",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Text Processing :: Markup :: Markdown",
  "Topic :: Utilities",
]
dependencies = [
  "deep-translator>=1.11.4,<2",
  "platformdirs>=4.9.4,<5",
  "rich>=14.1.0,<15",
  "textual>=6.1.0,<7",
]

[project.urls]
Homepage = "https://github.com/rockeron/mark4"
Repository = "https://github.com/rockeron/mark4"

[project.scripts]
mark4 = "mark4.main:main"

[project.optional-dependencies]
dev = [
  "pytest>=8.4.2,<9",
  "pytest-asyncio>=1.2.0,<2",
]

[build-system]
requires = ["setuptools>=80.9.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
mark4 = ["app.tcss"]

[tool.pytest.ini_options]
pythonpath = ["src"]
